2016-04-02 0.12.9
- Fixes:
  - Regression: Do not detect empty areas as clickable (issue #572)
  - Regression: Position and resize task icon correctly (issue #575)
  - Use imlib2 for taking screenshot; if it fails, use Xlib (issue #574)
  - Battery: lower sample frequency when there is no support for reading current/power

2016-03-25 0.12.8
- Major changes (see details below):
  - Icon cache and lazy icon theme loading to improve performance in tint2 and tint2conf
  - Extra tint2rc themes are installed to /usr/share/tint2 and available in tint2conf
  - Tint2conf GUI improvements
- Config options with changed behavior:
  - The launcher now also allows launcher_item_app entries without a full path.
    In this case the .desktop file is searched in the standard application directories (issue #565).
  - If the panel size is given as a percentage and a non-zero margin is also specified,
    the size is now computed as a fraction of the available size (i.e. monitor size - margin).
    Before it was computed as a fraction of the monitor size first, then the margin was subtracted from the value, which
    was not intuitive (issue #559).
- Fixes:
  - Taskbar icons are now resized correctly for certain geometries (issue #560)
  - Fix get_version.sh so that it returns the correct version when .git is missing
  - Fix build on powerpc
  - Temporary files are now created in /tmp
  - The XDG paths are now used in the icon and application lookup in addition to the hardcoded defaults
  - Brigtness adjustments no longer distort colors
  - Fixed race in sorting systray icons by name
  - Fixed desktop entry parsing (issue #570)
  - tint2conf:
    - Applications are now sorted correctly
    - Avoid duplicate icon themes due to symlinks
    - Avoid loading desktop files marked as NoDisplay
- Enhancements:
  - Launcher icon paths are now cached, which greatly improves loading time for tint2 and tint2conf.